Ensure random ordering for each question and for all non-answer question types during quiz-taking