@@ -11,12 +11,15 @@ import org.wa55death405.quizhub.entities.QuestionAttempt;
 import org.wa55death405.quizhub.enums.QuestionType;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 /*
      * This class represents the taking of a question.
      * 'Taking' means the correct answer is not provided.
+     * Note: The choices, orderedOptions, matches, and options are shuffled.
  */
 @Data
 public class QuestionTakingDTO {
@@ -47,24 +50,33 @@ public class QuestionTakingDTO {
             this.questionAttempt = new QuestionAttemptTakingDTO(questionAttempt);
         }
 
-        if (!question.getChoices().isEmpty())
+        if (!question.getChoices().isEmpty()){
             this.choices = question.getChoices().stream()
                 .map(ChoiceGeneralDTO::new)
-                .toList();
+                .collect(Collectors.toList());
+            Collections.shuffle(this.choices);
+        }
 
-        if (!question.getOrderedOptions().isEmpty())
+        if (!question.getOrderedOptions().isEmpty()){
             this.orderedOptions = question.getOrderedOptions().stream()
                 .map(OrderedOptionGeneralDTO::new)
-                .toList();
+                .collect(Collectors.toList());
+            Collections.shuffle(this.orderedOptions);
+        }
 
-        if (!question.getMatches().isEmpty())
+        if (!question.getMatches().isEmpty()){
             this.matches = question.getMatches().stream()
                 .map(MatchGeneralDTO::new)
-                .toList();
+                .collect(Collectors.toList());
+            Collections.shuffle(this.matches);
+        }
 
-        if (!question.getOptions().isEmpty())
+        if (!question.getOptions().isEmpty()){
             this.options = question.getOptions().stream()
                 .map(OptionGeneralDTO::new)
-                .toList();
+                .collect(Collectors.toList());
+            Collections.shuffle(this.options);
+        }
+
     }
 }
